fix(icon): svg does not fit in flexbox space inside icon (#170)

--- a/projects/ng-aquila/src/icon/icon.component.scss
+++ b/projects/ng-aquila/src/icon/icon.component.scss
@@ -19,6 +19,7 @@ $icon-outline-size-xl: 160px;
     width: 1em;
     height: 1em;
     fill: currentColor;
+    flex: 0 0 auto;
   }
 
   &:before {
